[gd_scene load_steps=3 format=3 uid="uid://dg8k4xf2q2h3l"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 15.0

[node name="Player" type="RigidBody2D"]
collision_layer = 1
collision_mask = 3
mass = 1.0
gravity_scale = 0.0
linear_damp = 3.0
angular_damp = 5.0
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Sprite" type="Polygon2D" parent="."]
color = Color(0.8, 0.2, 0.2, 1)
polygon = PackedVector2Array(-12, -15, 12, -15, 15, -8, 15, 8, 12, 15, -12, 15, -15, 8, -15, -8)

[node name="Outline" type="Line2D" parent="."]
points = PackedVector2Array(-12, -15, 12, -15, 15, -8, 15, 8, 12, 15, -12, 15, -15, 8, -15, -8, -12, -15)
width = 2.0
default_color = Color(0, 0, 0, 0.6)
joint_mode = 2

[node name="DirectionIndicator" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 20, 0)
width = 3.0
default_color = Color(1, 1, 0, 1)

[node name="SelectionRing" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(20, 0, 17.32, 10, 10, 17.32, 0, 20, -10, 17.32, -17.32, 10, -20, 0, -17.32, -10, -10, -17.32, 0, -20, 10, -17.32, 17.32, -10, 20, 0)
width = 2.0
default_color = Color(0, 1, 0, 1)

[node name="BallIndicator" type="Line2D" parent="."]
visible = false
z_index = 5
points = PackedVector2Array(28, 0, 24.25, 14, 14, 24.25, 0, 28, -14, 24.25, -24.25, 14, -28, 0, -24.25, -14, -14, -24.25, 0, -28, 14, -24.25, 24.25, -14, 28, 0)
width = 5.0
default_color = Color(1, 0.84, 0, 1)
